--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorDark">#000000</color>
-    <color name="colorHome">#36952F</color>
+    <color name="colorHome">#0D4D42</color>
+    <color name="colorHome2">#36952F</color>
+    <color name="colorWelcome">#0D4D42</color>
 
 </resources>
