--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <Gallery
         android:id="@+id/gallery1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:spacing="5dp"/>
+        android:spacing="5dp" />
 
 </LinearLayout>
