--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +7,44 @@
     tools:context=".MainActivity"
     android:orientation="horizontal">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_gravity="top"
+        android:layout_weight="1"
+        android:text="\n\t\t\t\t\t\t\t오늘 내가 먹은 치킨은...\n\t\t\t\t\t\t\t\t\t\t\t\t\t내 뱃살은...[명언]\n"
+        android:textSize="50px"
+        android:layout_row="0"/>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="370dp"
+        android:layout_height="wrap_content"
+        android:layout_row="1"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:text="주변에 이런 공원은 어떠세요?"
+        android:textSize="50px"
+        android:layout_column="1" />
+
     <Gallery
         android:id="@+id/gallery1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:spacing="5dp" />
+        android:layout_height="152dp"
+        android:layout_gravity="fill_horizontal"
+        android:spacing="5dp"
+        android:layout_column="1"
+        android:layout_row="2" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/button_send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Goto MapsActivity"
+        android:layout_column="1"
+        android:layout_row="3"/>
+
+</GridLayout>
