--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:background="@drawable/topbottom_edge" >
 
     <TextView
@@ -36,15 +36,20 @@
         android:textSize="50px"
         android:textStyle="bold"/>
 
-    <Gallery
-        android:id="@+id/gallery1"
-        android:layout_width="277dp"
-        android:layout_height="152dp"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:layout_gravity="fill_horizontal"
-        android:background="@drawable/top_edge"
-        android:spacing="5dp" />
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/horizontalScroll">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/linearLayout">
+
+        </LinearLayout>
+
+    </HorizontalScrollView>
 
     <TextView
         android:id="@+id/textView4"
@@ -80,4 +85,4 @@
         android:text="걷기 시작!"
         android:textColor="@color/colorDark" />
 
-</GridLayout>
+</LinearLayout>
