--- a/app/src/main/res/drawable/topbottom_edge.xml
+++ b/app/src/main/res/drawable/topbottom_edge.xml
@@ -10,7 +10,7 @@
             <stroke
                 android:width="5dp"
                 android:color="#0D4D42" />
-            <solid android:color="#95b391"/>
+            <solid android:color="#FAFAFA"/>
         </shape>
     </item>
 </layer-list>
