--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -21,20 +21,53 @@
         android:layout_marginTop="15dp"
         >
 
+        <Chronometer
+            android:id="@+id/chronometer"
+            android:layout_width="fill_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorDark"
+            android:textSize="30sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
         <TextView
-            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="25sp"
             android:textColor="@color/colorDark"
-            android:text="거리"/>
+            android:text="거리:"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/distanceView"
+                android:textSize="25sp">
+            </TextView>
+        </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="25sp"
             android:textColor="@color/colorDark"
             android:text="걸음 수"/>
+        <TextView
+            android:id="@+id/stepcount"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="25sp"
+            android:textColor="@color/colorDark"
+            />
+
+    </LinearLayout>
 
     </LinearLayout>
     <LinearLayout
