다이어트 자극 명언 랜덤하게 보여주기

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,11 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:text="\n\t\t\t\t\t\t\t오늘 내가 먹은 치킨은...\n\t\t\t\t\t\t\t\t\t\t\t\t\t내 뱃살은...[자극 되는 말]\n"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:textAlignment="center"
         android:textSize="50px"
         android:textColor="@color/colorDark"
         android:background="@drawable/top_edge"
