--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -41,13 +41,13 @@
             android:textColor="@color/colorDark"
             android:text="거리:"/>
             <TextView
-                android:text="120m"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/distanceView"
+                android:id="@+id/stepdistance"
                 android:textColor="@color/colorDark"
                 android:textSize="25sp">
             </TextView>
+
         </LinearLayout>
 
     <LinearLayout
@@ -56,21 +56,39 @@
         android:orientation="horizontal"
         >
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textSize="25sp"
-            android:textColor="@color/colorDark"
-            android:text="걸음 수:"/>
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:textSize="25sp"
+        android:textColor="@color/colorDark"
+        android:text="걸음 수:"/>
         <TextView
             android:id="@+id/stepcount"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="25sp"
-            android:textColor="@color/colorDark"
-            android:text="152"
+            android:textColor="@color/colorAccent"
             />
-
     </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="25sp"
+                android:textColor="@color/colorDark"
+                android:text="칼로리:"/>
+            <TextView
+                android:id="@+id/stepcal"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="25sp"
+                android:textColor="@color/colorAccent"
+                />
+        </LinearLayout>
 
     </LinearLayout>
     <LinearLayout
