HomeActivity >> 가이드라인 추가 >> MainActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGray">#808080</color>
     <color name="colorSkin">#EFCBC2</color>
+    <color name="colorTwenparent">#80FFFFFF</color>
 </resources>
