글자 사이즈 변경(dp -> px)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,7 +108,7 @@
         android:onClick="gotoMaps"
         android:text=" 걷기 시작! "
         android:textColor="@color/colorDark"
-        android:textSize="30dp"
+        android:textSize="50px"
         android:fontFamily="@font/nanumgodik"/>
 
 </LinearLayout>
