--- a/app/src/main/res/layout/activity_parkinfo.xml
+++ b/app/src/main/res/layout/activity_parkinfo.xml
@@ -15,7 +15,7 @@
             android:layout_height="match_parent"
             android:id="@+id/parkName"
             android:textAlignment="center"
-            android:textSize="28dp"
+            android:textSize="55px"
             android:fontFamily="@font/nanumgodikextrabold"
             android:textColor="@android:color/black"
             android:layout_marginTop="30dp"
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/parkContent"
-            android:textSize="24dp"
+            android:textSize="50px"
             android:fontFamily="@font/nanumgodik"
             android:textColor="@android:color/black"
             android:layout_marginBottom="15dp"
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="편의 시설"
-                android:textSize="24dp"
+                android:textSize="50px"
                 android:fontFamily="@font/nanumgodikbold"
                 android:textColor="@android:color/white"
                 android:background="@drawable/parkinfodesign"
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/parkEquip"
-                android:textSize="24dp"
+                android:textSize="50px"
                 android:fontFamily="@font/nanumgodik"
                 android:textColor="@android:color/black"/>
 
@@ -87,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="식물"
-                android:textSize="24dp"
+                android:textSize="50px"
                 android:fontFamily="@font/nanumgodikbold"
                 android:textColor="@android:color/white"
                 android:background="@drawable/parkinfodesign"
@@ -97,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/parkPlants"
-                android:textSize="24dp"
+                android:textSize="50px"
                 android:fontFamily="@font/nanumgodik"
                 android:textColor="@android:color/black"/>
 
@@ -122,7 +122,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/parkReference"
-            android:textSize="24dp"
+            android:textSize="50px"
             android:fontFamily="@font/nanumgodik"
             android:textColor="@android:color/black"
             android:layout_marginBottom="15dp"
@@ -141,7 +141,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="주소"
-                android:textSize="24dp"
+                android:textSize="50px"
                 android:fontFamily="@font/nanumgodikbold"
                 android:textColor="@android:color/white"
                 android:background="@drawable/parkinfodesign"
@@ -151,7 +151,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/parkAddr"
-                android:textSize="24dp"
+                android:textSize="50px"
                 android:fontFamily="@font/nanumgodik"
                 android:textColor="@android:color/black"/>
 
@@ -169,7 +169,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="전화번호"
-                android:textSize="24dp"
+                android:textSize="50px"
                 android:fontFamily="@font/nanumgodikbold"
                 android:textColor="@android:color/white"
                 android:background="@drawable/parkinfodesign"
@@ -179,7 +179,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/parkTel"
-                android:textSize="24dp"
+                android:textSize="50px"
                 android:fontFamily="@font/nanumgodik"
                 android:textColor="@android:color/black"/>
 
@@ -197,7 +197,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="홈페이지"
-                android:textSize="24dp"
+                android:textSize="50px"
                 android:fontFamily="@font/nanumgodikbold"
                 android:textColor="@android:color/white"
                 android:background="@drawable/parkinfodesign"
@@ -207,7 +207,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/parkURL"
-                android:textSize="24dp"
+                android:textSize="50px"
                 android:fontFamily="@font/nanumgodik"
                 android:textColor="@android:color/black"
                 android:autoLink="web"
