1. 프로그레스바 아이콘 나뭇잎 색으로 바꿈 2. MainGuide 선 새로 땀 3. 메인 버튼 위치 살짝 바꿈 4. 맵스 UI 손봤는데 봐줘 + 글씨체 나눔extrabold로 수정 5. HomeActivity 이미지 새로 땀
+ 할 것 > 지오코더 서비스 사용불가 텍스트 없애야됨!

--- a/app/src/main/res/drawable/progressbar_progressbar1.xml
+++ b/app/src/main/res/drawable/progressbar_progressbar1.xml
@@ -49,7 +49,7 @@
 
                 <corners android:radius="6dp" />
 
-                <solid android:color="#adde83" />
+                <solid android:color="#59a922" />
 
             </shape>
 
