--- a/app/src/main/res/layout/activity_maps_guide.xml
+++ b/app/src/main/res/layout/activity_maps_guide.xml
@@ -9,7 +9,7 @@
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/mainguideimage"
+        app:srcCompat="@drawable/mapsguideimage"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
