--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -135,7 +135,7 @@
             android:textColor="@color/colorWhite"
             android:layout_width="80dp"
             android:layout_height="37dp"
-            android:text="끝"
+            android:text="종료"
             android:textStyle="bold"
             android:fontFamily="@font/nanumgodikbold"/>
 
